--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MadLevel3Exampl</string>
+    <string name="app_name">MadLevel4example</string>
     <string name="action_settings">Settings</string>
     <string name="reminders">Reminders</string>
     <string name="see_below">See below for all your reminders</string>
